# opsys

./: .gitignore  CMakeLists.txt  Cmd_delrec.c  Makefile  cmd_authors.c  cmd_create.c  cmd_date.c  cmd_erase.c  cmd_getdirparams.c  cmd_help.c  cmd_historic.c  cmd_listopen.c  cmd_lseek.c  cmd_quit.c  cmd_setdirparams.c  commands.h  list_cmd.c  list_file.c  main.c  main.h  shell  trocearCadena.c  trocearCadena.h  types.h
src/: Makefile  cmd_authors.c  cmd_authors.c.d  cmd_chdir.c  cmd_chdir.c.d  cmd_close.c  cmd_close.c.d  cmd_create.c  cmd_create.c.d  cmd_date.c  cmd_date.c.d  cmd_deljobs.c  cmd_delrec.c  cmd_delrec.c.d  cmd_dir.c  cmd_dir.c.d  cmd_dup.c  cmd_dup.c.d  cmd_envvar.c  cmd_erase.c  cmd_erase.c.d  cmd_exec.c  cmd_fork.c  cmd_free.c  cmd_getcwd.c  cmd_getcwd.c.d  cmd_getdirparams.c  cmd_getdirparams.c.d  cmd_getpid.c  cmd_getpid.c.d  cmd_help.c  cmd_help.c.d  cmd_historic.c  cmd_historic.c.d  cmd_infosys.c  cmd_infosys.c.d  cmd_jobs.c  cmd_listopen.c  cmd_listopen.c.d  cmd_lseek.c  (+40 more)
