cmake_minimum_required(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
project(Shell)
SET(CMAKE_CXX_STANDARD ${CMAKE_LANGUAGE_VERSION})
add_executable(new_target
        cmd_authors.c
        cmd_chdir.c
        cmd_close.c
        cmd_create.c
        cmd_date.c
        cmd_dup.c
        cmd_erase.c
        cmd_getcwd.c
        cmd_getpid.c
        cmd_help.c
        cmd_historic.c
        cmd_infosys.c
        cmd_listopen.c
        cmd_lseek.c
        cmd_open.c
        cmd_quit.c
        cmd_writestr.c
        commands.h
        list.h
        list_cmd.c
        list_file.c
        main.c
        main.h
        trocearCadena.c
        trocearCadena.h
        types.h
        cmd_getdirparams.c
        cmd_setdirparams.c
)